<resources>
    <string name="app_name">calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_dev">/</string>
    <string name="_mult">*</string>
    <string name="_equls">=</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="label_1">light theme</string>
    <string name="label_2">dark theme</string>
    <string name="page_title">Сhoose a theme for the calculator</string>
    <string name="content_description_media">make your choice</string>
    <string name="button_choice_text">choice</string>

</resources>