<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:foregroundGravity="bottom"
    android:gravity="center|center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/geometry" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ButtonMarginTop_10"
        android:background="@color/color_result_text"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="@dimen/TextResultSize"
        android:textStyle="bold" />

    <Space
        android:id="@+id/space_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_layout_height" />

    <LinearLayout
        android:id="@+id/row1"
        style="@style/Theme.Calculator.LinearLayout"
        android:layout_below="@+id/space_top"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_3"
         />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        style="@style/Theme.Calculator.LinearLayout"
        android:layout_below="@id/row1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_4"
          />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_5"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_6"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        style="@style/Theme.Calculator.LinearLayout"
        android:layout_below="@id/row2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        style="@style/Theme.Calculator.LinearLayout"
        android:layout_below="@id/row3"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_minus" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        style="@style/Theme.Calculator.LinearLayout"
        android:layout_below="@id/row4"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDev"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_dev"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMult"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_mult"
          />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            style="@style/Theme.Calculator.GeekBrains"
            android:text="@string/_equls"
            />



</LinearLayout>

</RelativeLayout>