<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_media"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/choose" />


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                app:subtitleTextColor="@color/white"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_toolbar_heigth"
                android:background="@android:color/transparent"
                app:title="@string/page_title"
                app:titleCentered="true"
                 />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:layout_marginTop="@dimen/radio_heigth"
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_1"
            android:textSize="@dimen/radio_text_size" />
    <RadioButton
        android:id="@+id/radio_button_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/radio_text_size"
        android:text="@string/label_2"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/choice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_choice_text_size"
        android:text="@string/button_choice_text"
        android:layout_marginStart="@dimen/choice_button_margin_left"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/choice_button_margin_top">

    </com.google.android.material.button.MaterialButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
